--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 #baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://votre-nom-utilisateur.github.io" # Remplacez par votre nom d'utilisateur GitHub
+url: "https://pulsy-bh.github.io" # Remplacez par votre nom d'utilisateur GitHub
 baseurl: "" # Laissez vide pour un site à la racine
 
 # Build settings
