--- a/_config.yml
+++ b/_config.yml
@@ -68,5 +68,5 @@ theme: null
 remote_theme: null
 
 # Si vous utilisez GitHub Pages, désactivez également le thème par défaut de GitHub Pages
-github: 
-  is_project_page: false
+# github: 
+#   is_project_page: false
